syntax = "proto3";

option go_package = "pb/gen";

package ukama.lookup.v1;

import "validator.proto";

service LookupService {

    /* Orgs */
    rpc AddOrg(AddOrgRequest) returns (AddOrgResponse);
    rpc UpdateOrg(UpdateOrgRequest) returns (UpdateOrgResponse);
    rpc GetOrg(GetOrgRequest) returns (GetOrgResponse);
    
    /* Nodes */

    /* For Node bootstarping */
    rpc GetNode(GetNodeRequest) returns (GetNodeResponse);

    /* For other systems and debigging purpose */
    rpc AddNodeForOrg(AddNodeRequest) returns (AddNodeResponse);
    rpc GetNodeForOrg(GetNodeForOrgRequest) returns (GetNodeResponse);
    rpc DeleteNodeForOrg(DeleteNodeRequest) returns (DeleteNodeResponse);

    /* System */
    rpc GetSystemForOrg(GetSystemRequest) returns (GetSystemResponse);
    rpc AddSystemForOrg(AddSystemRequest) returns (AddSystemResponse);
    rpc UpdateSystemForOrg(UpdateSystemRequest) returns (UpdateSystemResponse);
    rpc DeleteSystemForOrg(DeleteSystemRequest) returns (DeleteSystemResponse);

}


message AddOrgRequest {
    string orgName = 1 [(validator.field) = {string_not_empty: true}];
    string orgId = 2 [(validator.field) = {uuid_ver:4, string_not_empty: true}];
    string certificate = 3 [(validator.field) = {string_not_empty: true}];
    string ip = 4  [(validator.field) = {string_not_empty: true}];
}

message AddOrgResponse {
    string orgName = 1;
    string orgId = 2 ;
    string certificate = 3;
    string ip = 4;
}

message UpdateOrgRequest {
    string orgName = 1  [(validator.field) = {string_not_empty: true}];
    string certificate = 2;
    string ip = 3;
}

message UpdateOrgResponse { 
    string orgName = 1  [(validator.field) = {string_not_empty: true}];
    string certificate = 2;
    string ip = 3;
}

message GetOrgRequest {
    string orgName = 1  [(validator.field) = {string_not_empty: true}];
}

message GetOrgResponse {
    string orgName = 1  [(validator.field) = {string_not_empty: true}];
    string certificate = 2;
    string ip = 3;

}

message AddNodeRequest {
    string nodeId = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 ;
}

message AddNodeResponse {
    string nodeId = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 ;
}

message GetNodeForOrgRequest{
    string nodeId = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 [(validator.field) = {string_not_empty: true}];
}

message GetNodeResponse {
    string nodeId = 1;
    string orgName = 2;
    string certificate = 3;
    string ip = 4;  
}

message GetNodeRequest{
    string nodeId = 1 [(validator.field) = {string_not_empty: true}];
}

message DeleteNodeRequest{
    string nodeId = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 [(validator.field) = {string_not_empty: true}];
}

message DeleteNodeResponse {

}

message GetSystemRequest{
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2;
    string orgId = 3 [(validator.field) = {uuid_ver:4}];
}

message GetSystemResponse {
    string systemName = 1;
    string systemId = 2;
    string orgName = 3;
    string certificate = 4;
    string ip = 5;
    int32 port = 6;
    uint32 health = 7;
}

message AddSystemRequest{
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 [(validator.field) = {string_not_empty: true}];
    string certificate = 3 [(validator.field) = {string_not_empty: true}];
    string ip = 4 [(validator.field) = {string_not_empty: true}];
    int32 port = 5 [(validator.field) = {string_not_empty: true}];
}

message AddSystemResponse {
    string systemName = 1;
    string systemId = 2;
    string orgName = 3;
    string certificate = 4;
    string ip = 5;
    int32 port = 6;
}

message UpdateSystemRequest{
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 [(validator.field) = {string_not_empty: true}];
    string certificate = 3; 
    string ip = 4; 
    int32 port = 5; 
}

message UpdateSystemResponse {
    string systemName = 1;
    string systemId = 2;
    string orgName = 3;
    string certificate = 4;
    string ip = 5;
    int32 port = 6;
}

message DeleteSystemRequest{
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    string orgName = 2 [(validator.field) = {string_not_empty: true}];
}

message DeleteSystemResponse {

}
